[gd_scene load_steps=8 format=3 uid="uid://d2q6c5sugkh21"]

[ext_resource type="Script" path="res://source/scripts/slime.gd" id="1_qm7gm"]
[ext_resource type="Texture2D" uid="uid://udeqixgmw5lc" path="res://assets/images/Sprite-0002.png" id="2_gmp70"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gtd2"]
size = Vector2(67.9657, 42.3058)

[sub_resource type="GDScript" id="GDScript_ua2xa"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7q54e"]
size = Vector2(69.7784, 5.81487)

[sub_resource type="CircleShape2D" id="CircleShape2D_d23hb"]
radius = 959.512

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnjkk"]
size = Vector2(70.6837, 42.4786)

[node name="Slime" type="CharacterBody2D" groups=["Bounce"]]
position = Vector2(-5, -27)
scale = Vector2(0.823945, 0.823945)
script = ExtResource("1_qm7gm")
SPEED = 150.0
JUMP_VELOCITY = -550.0

[node name="ColorRect" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(41.0652, 41.0652)
scale = Vector2(5.04286, 5.04286)
texture = ExtResource("2_gmp70")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(41.2649, 58.9495)
shape = SubResource("RectangleShape2D_3gtd2")
debug_color = Color(0.201138, 0.545417, 0.759715, 0.42)

[node name="Bounce" type="Area2D" parent="."]
script = SubResource("GDScript_ua2xa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounce"]
position = Vector2(40.7041, 34.8892)
shape = SubResource("RectangleShape2D_7q54e")
debug_color = Color(0.130344, 0.289516, 0.155363, 0.42)

[node name="PlayerDectection" type="Area2D" parent="."]
position = Vector2(47.9726, 43.5876)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDectection"]
position = Vector2(-0.639342, 0.104638)
shape = SubResource("CircleShape2D_d23hb")
one_way_collision_margin = 0.0
debug_color = Color(0.18276, 0.529512, 0.493633, 0)

[node name="Player Death" type="Area2D" parent="."]
position = Vector2(47.9726, 43.5876)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Death"]
position = Vector2(-6.85301, 16.4892)
shape = SubResource("RectangleShape2D_gnjkk")
debug_color = Color(0.97632, 0, 0.416338, 0)

[connection signal="body_entered" from="Bounce" to="." method="_on_bounce_area_entered"]
[connection signal="body_entered" from="PlayerDectection" to="." method="_on_player_dectection_body_entered"]
[connection signal="body_exited" from="PlayerDectection" to="." method="_on_player_dectection_body_exited"]
[connection signal="body_entered" from="Player Death" to="." method="_on_player_death_body_entered"]
